--- a/src/index.css
+++ b/src/index.css
@@ -1,63 +1,22 @@
+@import url("https://fonts.googleapis.com/css?family=Lato");
+
 * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
 }
 
 @font-face {
-  font-family: "marguerite";
-  src: url('./Blacksword.otf');
+	font-family: "marguerite";
+	src: url("./Blacksword.otf");
 }
 
-body, html, #root {
-  width: 100%;
-  height: 100%;
-  background: rgba(38, 38, 38, 1.0);
+body,
+html,
+#root {
+	width: 100%;
+	height: 100%;
+  background:rgba(25, 30, 33, 1.0);
   color: white;
-  font-family: sans-serif;
-}
-
-.loader,
-.loader:after {
-  border-radius: 50%;
-  width: 50px;
-  height: 50px;
-}
-
-.loader {
-  position: absolute;
-  top: calc(50% - 25px);
-  left: 25px;
-  margin-right: 10px;
-  font-size: 10px;
-  text-indent: -9999em;
-  border-top: 5px solid rgba(0,0,0, 0.2);
-  border-right: 5px solid rgba(0,0,0, 0.2);
-  border-bottom: 5px solid rgba(0,0,0, 0.2);
-  border-left: 5px solid white;
-  -webkit-transform: translateZ(0);
-  -ms-transform: translateZ(0);
-  transform: translateZ(0);
-  -webkit-animation: load8 1.1s infinite linear;
-  animation: load8 1.1s infinite linear;
-}
-@-webkit-keyframes load8 {
-  0% {
-    -webkit-transform: rotate(0deg);
-    transform: rotate(0deg);
-  }
-  100% {
-    -webkit-transform: rotate(360deg);
-    transform: rotate(360deg);
-  }
-}
-@keyframes load8 {
-  0% {
-    -webkit-transform: rotate(0deg);
-    transform: rotate(0deg);
-  }
-  100% {
-    -webkit-transform: rotate(360deg);
-    transform: rotate(360deg);
-  }
+	font-family: "Lato", sans-serif;
 }
