--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css?family=Lato");
+@import url('https://fonts.googleapis.com/css?family=Lato');
 
 * {
 	margin: 0;
@@ -7,8 +7,13 @@
 }
 
 @font-face {
-	font-family: "marguerite";
-	src: url("./Blacksword.otf");
+	font-family: 'Domus';
+	src: url('./jaf-domus/jaf-domus-400.ttf');
+}
+
+@font-face {
+	font-family: 'marguerite';
+	src: url('./Blacksword.otf');
 }
 
 body,
@@ -16,7 +21,7 @@ html,
 #root {
 	width: 100%;
 	height: 100%;
-  background:rgba(25, 30, 33, 1.0);
-  color: white;
-	font-family: "Lato", sans-serif;
+	background: rgba(25, 30, 33, 1);
+	color: white;
+	font-family: 'Lato', sans-serif;
 }
